# Photopaper

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  com.github.RuriChoco.Photopaper.json  meson.build
.github/workflows/: publish-flatpak.yml
data/: com.github.RuriChoco.Photopaper.desktop.in  com.github.RuriChoco.Photopaper.gschema.xml  com.github.RuriChoco.Photopaper.metainfo.xml.in  com.github.RuriChoco.Photopaper.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  crop_dialog.rs  main.rs  meson.build  photopaper.gresource.xml  preferences.rs  preferences.ui  processor.rs  settings.rs  shortcuts-dialog.ui  test.rs  window.rs  window.ui
